Issue #983: Add support to Windows CommandLines using SSH
* Corrected an undesired regression.